--- a/style.scss
+++ b/style.scss
@@ -4,17 +4,17 @@
 @import "{{ site.theme }}";
 
 a {
- color:#6a0dad;
+ color:30c39e;
 }
 a:hover,
 a:focus {
- color:#6a0dad;
+ color:#30c39e;
 }
 a small {
- color:#6a0dad;
+ color:30c39e;
 }
 a:hover small {
- color:#6a0dad
+ color:30c39e
 }
 
 body {
