--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,17 +4,17 @@
 @import "{{ site.theme }}";
 
 a {
- color:#30c39e;
+ color:#8e244d;
 }
 a:hover,
 a:focus {
- color:#30c39e;
+ color:#8e244d;
 }
 a small {
- color:#30c39e;
+ color:#8e244d;
 }
 a:hover small {
- color:#30c39e
+ color:#8e244d
 }
 
 body {
