--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@ a:hover small {
 }
 
 body {
- font-family: "Arial", Helvetica, sans-serif;
+ font-family: Arial, Helvetica, sans-serif;
  font-size: 100%;
 }
 
