--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@ a:hover small {
 }
 
 body {
- font-family: "Trebuchet MS", Helvetica, sans-serif
+ font-family: "Trebuchet MS", Helvetica, sans-serif;
  font-size: 105%;
 }
 
